--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>MRCA STUDENTS HUB - ONLY FOR STUDENTS</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <style>
+      /* Ensure fonts load immediately */
+      body {
+        font-family: 'Plus Jakarta Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #F0F2F5;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
